--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/commons-codec/commons-codec
-    compile group: 'commons-codec', name: 'commons-codec', version: '1.11'
-
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    testCompile 'junit:junit:4.12'
+    compile 'commons-codec:commons-codec:1.11'
+    compile 'org.apache.commons:commons-lang3:3.7'
 
 }
